Wed Oct  8 23:40:26 2003  Matthias Clasen  <maclas@gmx.de>

	* glib/gmarkup.c (g_markup_printf_escaped): 
	(g_markup_vprintf_escaped): Document as 2.4 additions.
	(unescape_text): Implement newline and whitespace normalization
	according to the XML specification.  (#123919)
	(g_markup_escape_text): Document whitespace (non)handling.

2003-10-05  Matthias Clasen  <maclas@gmx.de>

	* configure.in: Make the various printf feature test macros
	reflect the system printf, even when using the included printf.
	In particular, don't force HAVE_C99_SNPRINTF, since g-gnulib.h 
	needs that test result.  (#122973)

	* glib/gprintf.c (g_vasprintf): Don't rely on HAVE_VASPRINTF,
	directly check for _g_vasprintf.

	* glib/gprintfint.h (_g_vasprintf): Only define _g_vasprintf()
	if vasprintf() is available.

	* glib/gnulib/printf.c (_g_gnulib_vfprintf): Don't write
	trailing nul to the file. (#122973)

	* acinclude.m4 (AC_FUNC_VSNPRINTF_C99): Make the test 
	detect non-C99-compliance of AIX 5.1 and Solaris 
	vsnprintf().  (#122496)

Thu Oct  2 01:15:46 2003  Owen Taylor  <otaylor@redhat.com>

	* tests/gobject/ifacecheck.c: Test case for
	g_type_add_interface_check().

	* tests/gobject/ifaceinit.c: Add #undef G_DISABLE_ASSERT.

Thu Oct  2 01:11:39 2003  Owen Taylor  <otaylor@redhat.com>

	* tests/gobject/ifaceinherit.c: Remove some tests that
	were testing things that weren't supposed to work; add
	a test for adding an interface first to the child class,
	then to the parent class.

Thu Oct  2 00:02:55 2003  Owen Taylor  <otaylor@redhat.com>

	* tests/gobject/Makefile.am test/gobject/ifaceinherit.c:
	Tests of interface inheritance and overriding.

2003-09-30  Tor Lillqvist  <tml@iki.fi>

	* glib/gspawn-win32.c (do_spawn): Call protect_argv() in
	do_spawn() instead of in do_spawn_with_pipes() so that we can use
	the original argv[0] as the program file name parameter to
	spawnv() in the shortcut (doing without helper process)