@@ -1,3 +1,8 @@
+Tue Oct 14 17:44:38 2003  Owen Taylor  <otaylor@redhat.com>
+
+	* tests/gobject/ifaceproperties.c: Test for interface
+	properties and GParamSpecOverride.
+
 Wed Oct  8 23:40:26 2003  Matthias Clasen  <maclas@gmx.de>
 
 	* glib/gmarkup.c (g_markup_printf_escaped): 
